--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ repository               : "Lucas-zhao2100/Lucas-zhao2100.github.io"
 author:
   # Biographic information
   avatar           : "image1.jpg"
-  name             : "赵春宇 Chunyu Zhao"
+  name             : "赵春宇 Chunyu Zhao⛷️"
   pronouns         : # Mr 
-  bio              : "Master's student in Remote sensing"
+  bio              : "Master's Student in Remote Sensing Science and Technology"
   location         : "Beijing, China"
   employer         : "Faculty of Geographical Science,<br>Beijing Normal University"
   uri              : # URL
